--- a/files/Caddyfile.tmpl
+++ b/files/Caddyfile.tmpl
@@ -6,8 +6,8 @@
    {{ $link := index $line 0 }}
    # link {{ $link }}
    {{ $linkelements := split $link "/" }}
-   {{ $stack := index $link 0 }}
-   {{ $service := index $link 1 }}
+   {{ $stack := index $linkelements 0 }}
+   {{ $service := index $linkelements 1 }}
    {{ $containers := gets (printf "/stacks/%s/services/%s/containers" $stack $service) }}
    # containers {{ $containers }}
    {{ $proxies := split (index $line 1) "," }}
