--- a/files/Caddyfile.tmpl
+++ b/files/Caddyfile.tmpl
@@ -8,7 +8,7 @@
    {{ $linkelements := split $link "/" }}
    {{ $stack := index $linkelements 0 }}
    {{ $service := index $linkelements 1 }}
-   {{ $containers := gets (printf "/stacks/%s/services/%s/containers" $stack $service) }}
+   {{ $containers := gets (printf "/stacks/%s/services/%s/containers/*/ips/*" $stack $service) }}
    # containers {{ $containers }}
    {{ $proxies := split (index $line 1) "," }}
    # proxies {{ $proxies }}
