--- a/files/Caddyfile.tmpl
+++ b/files/Caddyfile.tmpl
@@ -1,42 +1,35 @@
 #isawesome;blu.bla.com:80=8000,bla.fff.com:80=9999@world;addd
-{{ $hosts := split (getenv "HOSTS") "@" }}
+{{ $hosts := split (getenv "HOSTS") "@" -}}
 {{ range $hosts }}
-   {{ $line := split . ";" }}
-   # line {{ $line }}
-   {{ $link := index $line 0 }}
-   # link {{ $link }}
-   {{ $linkelements := split $link "/" }}
-   {{ $stack := index $linkelements 0 }}
-   {{ $service := index $linkelements 1 }}
-   {{ $containers := gets (printf "/stacks/%s/services/%s/containers/*/ips/*" $stack $service) }}
-   # containers {{ $containers }}
-   {{ $proxies := split (index $line 1) "," }}
-   # proxies {{ $proxies }}
-   {{ range $proxies }}
-   {{ $vhost := split . ":" }}
-   {{ $vhostname := index $vhost 0 }}
-   # vhostname {{ $vhostname }}
-   {{ $ports := split (index $vhost 1) "=" }}
-   # ports {{ $ports }}
-   {{ $dport := index $ports 0 }}
-   {{ $sport := index $ports 1 }}
+   {{ $line := split . ";" -}}
+   {{ $link := index $line 0 -}}
+   {{ $linkelements := split $link "/" -}}
+   {{ $stack := index $linkelements 0 -}}
+   {{ $service := index $linkelements 1 -}}
+   {{ $containers := gets (printf "/stacks/%s/services/%s/containers/*/ips/*" $stack $service) -}}
+   {{ $proxies := split (index $line 1) "," -}}
+   {{ $proxy := index $proxies 0 -}}
+   {{ $vhost := split $proxy ":" -}}
+   {{ $vhostname := index $vhost 0 -}}
+   {{ $ports := split (index $vhost 1) "=" -}}
+   {{ $dport := index $ports 0 -}}
+   {{ $sport := index $ports 1 -}}
    
-	{{$vhostname}}:{{$dport}} {
-	  #basicauth / Bob hiccup
-	  proxy / {{range $containers -}}{{.Key}}{{end -}}:{{$sport}} {
+   {{ range $proxies -}}{{ $vhost := split . ":" -}}{{ $vhostname := index $vhost 0 -}}{{ $ports := split (index $vhost 1) "=" -}}{{ $dport := index $ports 0 -}}{{$vhostname}}:{{$dport}} {{end -}} {
+     #basicauth / Bob hiccup
+     proxy / {{range $containers -}}{{.Value}}:{{$sport}} {{end -}} {
 	    websocket
 	    proxy_header Host {host}
 	    proxy_header X-Real-IP {remote}
 	    proxy_header X-Forwarded-Proto {scheme}
-	  }
-	  log /logs/{{$link}}-access.log
-	  {
-	    rotate {
-	      size 100 # Rotate after 100 MB
-	      age  14  # Keep log files for 14 days
-	      keep 10  # Keep at most 10 log files
-	    }
-	  }
-	}
-   {{ end }}
+     }
+     log /logs/{{$link}}-access.log
+     {
+       rotate {
+         size 100 # Rotate after 100 MB
+           age  14  # Keep log files for 14 days
+           keep 10  # Keep at most 10 log files
+         }
+       }
+    }
 {{ end }}
