--- a/files/Caddyfile.tmpl
+++ b/files/Caddyfile.tmpl
@@ -41,8 +41,8 @@
        {{ $targethostname := $link -}}
        {{ $newlinks := split $link "#" -}}
        {{ if gt (len $newlinks) 1 -}}
-         {{$taget := index $newlinks 0 -}}
-         {{$tagethostname := index $newlinks 1 -}}
+         {{$target := index $newlinks 0 -}}
+         {{$targethostname := index $newlinks 1 -}}
        {{end -}}
 
        {{ range $proxies -}}{{ $vhost := split . ":" -}}{{ $vhostname := index $vhost 0 -}}{{ $ports := split (index $vhost 1) "=" -}}{{ $dport := index $ports 0 -}}{{$vhostname}}:{{$dport}} {{end -}} {
