--- a/files/Caddyfile.tmpl
+++ b/files/Caddyfile.tmpl
@@ -37,30 +37,47 @@
         }
     {{end -}}
   {{else -}}
-       {{ $target := $link -}}
-       {{ $targethostname := $link -}}
        {{ $newlinks := split $link "#" -}}
        {{ if gt (len $newlinks) 1 -}}
          {{$target := index $newlinks 0 -}}
          {{$targethostname := index $newlinks 1 -}}
-       {{end -}}
-
-       {{ range $proxies -}}{{ $vhost := split . ":" -}}{{ $vhostname := index $vhost 0 -}}{{ $ports := split (index $vhost 1) "=" -}}{{ $dport := index $ports 0 -}}{{$vhostname}}:{{$dport}} {{end -}} {
-         proxy / {{$target}}:{{$sport}} {
-    	    websocket
-    	    proxy_header Host {{$targethostname}}
-    	    proxy_header X-Real-IP {remote}
-    	    proxy_header X-Forwarded-Proto {scheme}
-         }
-         log /logs/{{$vhostname}}-access.log
-         {
-           rotate {
-             size 100 # Rotate after 100 MB
-               age  14  # Keep log files for 14 days
-               keep 10  # Keep at most 10 log files
-             }
+         {{ range $proxies -}}{{ $vhost := split . ":" -}}{{ $vhostname := index $vhost 0 -}}{{ $ports := split (index $vhost 1) "=" -}}{{ $dport := index $ports 0 -}}{{$vhostname}}:{{$dport}} {{end -}} {
+           proxy / {{$target}}:{{$sport}} {
+      	    websocket
+      	    proxy_header Host {{$targethostname}}
+      	    proxy_header X-Real-IP {remote}
+      	    proxy_header X-Forwarded-Proto {scheme}
            }
-        }
+           log /logs/{{$vhostname}}-access.log
+           {
+             rotate {
+               size 100 # Rotate after 100 MB
+                 age  14  # Keep log files for 14 days
+                 keep 10  # Keep at most 10 log files
+               }
+             }
+          }
+       {{else -}}
+         {{ $target := $link -}}
+         {{ $targethostname := $link -}}
+
+         {{ range $proxies -}}{{ $vhost := split . ":" -}}{{ $vhostname := index $vhost 0 -}}{{ $ports := split (index $vhost 1) "=" -}}{{ $dport := index $ports 0 -}}{{$vhostname}}:{{$dport}} {{end -}} {
+           proxy / {{$target}}:{{$sport}} {
+      	    websocket
+      	    proxy_header Host {{$targethostname}}
+      	    proxy_header X-Real-IP {remote}
+      	    proxy_header X-Forwarded-Proto {scheme}
+           }
+           log /logs/{{$vhostname}}-access.log
+           {
+             rotate {
+               size 100 # Rotate after 100 MB
+                 age  14  # Keep log files for 14 days
+                 keep 10  # Keep at most 10 log files
+               }
+             }
+          }
+       {{end -}}
   {{end -}}
 
 {{ end }}
