--- a/files/Caddyfile.tmpl
+++ b/files/Caddyfile.tmpl
@@ -32,6 +32,11 @@
            {{ if (ne (getenv "TLS_DIR") "") -}}
            tls {
              load {{ getenv "TLS_DIR"}}
+
+             {{if gt (len $line) 4 -}}
+               {{$tlsconfig := index $line 4 -}}
+               {{$tlsconfig}}
+             {{end -}}
            }
            {{ end -}}
          {{ end -}}
@@ -71,6 +76,10 @@
            {{ if (ne (getenv "TLS_DIR") "") -}}
            tls {
              load {{ getenv "TLS_DIR"}}
+             {{if gt (len $line) 4 -}}
+               {{$tlsconfig := index $line 4 -}}
+               {{$tlsconfig}}
+             {{end -}}
            }
            {{ end -}}
          {{ end -}}
@@ -115,6 +124,10 @@
            {{ if (ne (getenv "TLS_DIR") "") -}}
            tls {
              load {{ getenv "TLS_DIR"}}
+             {{if gt (len $line) 4 -}}
+               {{$tlsconfig := index $line 4 -}}
+               {{$tlsconfig}}
+             {{end -}}
            }
            {{ end -}}
          {{ end -}}
